// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button as 1`] = `
.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dbdbdb;
  padding: 3px 12px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  border-color: #b5b5b5;
}

.c0:active {
  background-color: #dbdbdb;
  border-color: #595959;
}

<a
  className="c0"
  href="#"
>
  as a
</a>
`;

exports[`Button basic 1`] = `
.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dbdbdb;
  padding: 3px 12px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  border-color: #b5b5b5;
}

.c0:active {
  background-color: #dbdbdb;
  border-color: #595959;
}

<button
  className="c0"
>
  basic
</button>
`;

exports[`Button disabled 1`] = `
.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dbdbdb;
  padding: 3px 12px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  border-color: #b5b5b5;
}

.c0:active {
  background-color: #dbdbdb;
  border-color: #595959;
}

<button
  className="c0"
  disabled={true}
>
  disabled
</button>
`;

exports[`Button size 1`] = `
Array [
  .c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dbdbdb;
  padding: 0 8px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  border-color: #b5b5b5;
}

.c0:active {
  background-color: #dbdbdb;
  border-color: #595959;
}

<button
    className="c0"
    size="small"
  >
    small
  </button>,
  .c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dbdbdb;
  padding: 3px 12px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  border-color: #b5b5b5;
}

.c0:active {
  background-color: #dbdbdb;
  border-color: #595959;
}

<button
    className="c0"
    size="medium"
  >
    medium
  </button>,
  .c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dbdbdb;
  padding: 8px 42px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  border-color: #b5b5b5;
}

.c0:active {
  background-color: #dbdbdb;
  border-color: #595959;
}

<button
    className="c0"
    size="large"
  >
    large
  </button>,
]
`;

exports[`Button variant 1`] = `
Array [
  .c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dbdbdb;
  padding: 3px 12px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  border-color: #b5b5b5;
}

.c0:active {
  background-color: #dbdbdb;
  border-color: #595959;
}

<button
    className="c0"
  >
    standard
  </button>,
  .c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0.0228em;
  -moz-letter-spacing: 0.0228em;
  -ms-letter-spacing: 0.0228em;
  letter-spacing: 0.0228em;
  font-family: "Segoe UI",PingFangSC-Regular,sans-serif,Arial,Helvetica,Roboto;
  -webkit-transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 360ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 360ms cubic-bezier(0.4,0,0.2,1) 0ms,padding 360ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #ffffff;
  background-color: #0078d4;
  border-color: #0078d4;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.22),0px 3px 8px 0px rgba(0,0,0,0.16),0px 1px 14px 0px rgba(0,0,0,0.1);
  padding: 3px 12px;
}

.c0:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: #005cad;
  border-color: #005cad;
}

.c0:active {
  background-color: #002d61;
  border-color: #002d61;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.22),0px 7px 11px 1px rgba(0,0,0,0.16),0px 3px 17px 2px rgba(0,0,0,0.1);
}

<button
    className="c0"
  >
    primary
  </button>,
]
`;
